project-two/force-app/main/default/objects/Product2/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <label>Publisher</label>
    <length>100</length>
    <type>Text</type>
</CustomField>